[metadata]
name = naojutils
description = Python modules for working with Subaru Telescope instrument data
long_description = file: README.txt
long_description_content_type = text/plain
author = Software Division, Subaru Telescope, NAOJ
author_email = ocs@naoj.org
license = BSD
license_files = LICENSE.txt
url = https://github.com/naojsoft/naojutils
edit_on_github = False
github_project = naojsoft/naojutils
keywords = subaru, telescope, observation, data, analysis, operation
 
[options]
zip_safe = False
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21
    astropy>=5.0
    scipy>=0.18.1
    matplotlib>=3.4
    python-dateutil>=2.8.2
setup_requires =
    setuptools_scm
include_package_data = True
scripts =
    scripts/focas_ifu_reconstruct_image
    scripts/focas_ifu_biassub
    scripts/focas_ifu_mkbiastemplate
    scripts/focas_ifu_mkflat
    scripts/hsc_pack
    scripts/pamfake

[options.package_data]
naoj.focas = ifu_regions/*.reg
